Correction du tp formulaire du 27/10/23

--- a/TP_PHP/Classe virtuelle du vendredi 27-10-2023/index.html
+++ b/TP_PHP/Classe virtuelle du vendredi 27-10-2023/index.html
@@ -16,7 +16,7 @@
     
     <main>
         <div class="content">
-            <form class="form" action="traitement.php" method="post">
+            <form action="traitement.php" method="post">
                 <fieldset>
                     <legend><h2>Adresse client</h2></legend>
                     <label>Prénom :</label><input type="text" name="prenom" size="30" autofocus=""><br><br>
